--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
     "sequelize": "^5.21.3",
-    "stripe": "^7.14.0"
+    "stripe": "^7.14.0",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "node server/server.js",
